--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
                 <version>2.2.2</version>
                 <type>jar</type>
             </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.25</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
