--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.25</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>2.7.6</version>
+            </dependency>
+            <!--import fast json-->
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>2.0.23</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -53,7 +64,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>`,
                 <version>3.8.1</version>
                 <configuration>
                     <source>11</source>
