--- a/start/src/main/resources/application-dev.properties
+++ b/start/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/case_workbench?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
