--- a/start/src/main/resources/application-dev.properties
+++ b/start/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # ***************** MySQL db configs ****************
 spring.datasource.url=jdbc:mysql://localhost:3306/case_workbench?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
