--- a/case-workbench-service/pom.xml
+++ b/case-workbench-service/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <artifactId>case-workbench-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
