加入构建参数

--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -36,7 +36,7 @@ mybatis.type-aliases-package=cn.nolaurence.caseworkbench.mybatis.entity
 
 
 
-spring.profiles.active=dev
+spring.profiles.active=@profiles.active@
 
 
 
