--- a/pom.xml
+++ b/pom.xml
@@ -109,4 +109,22 @@
         </plugins>
     </build>
 
+    <profiles>
+        <!-- 开发 -->
+        <profile>
+            <!-- profile的id -->
+            <id>dev</id>
+            <properties>
+                <profiles.active>dev</profiles.active>
+            </properties>
+        </profile>
+        <!-- 生产 -->
+        <profile>
+            <id>pro</id>
+            <properties>
+                <profiles.active>pro</profiles.active>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
